--- a/doc/多租户.md
+++ b/doc/多租户.md
@@ -1,5 +1,7 @@
 通过设置`bucket`实现多租户。
 
+通过将环境变量`TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
+
 # 管理端
 
 创建并管理`bucket`。
@@ -9,6 +11,10 @@
 # 用户端
 
 选择进入有访问权限的`bucket`。
+
+如果用户有唯一的`bucket`，自动选择这个`bucket`进入，否则要求用户从可用列表中选择一个`bucket`。
+
+在编译阶段，过将环境变量`VUE_APP_TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
 
 # 关闭多租户模式
 
