--- a/doc/多租户.md
+++ b/doc/多租户.md
@@ -2,6 +2,12 @@
 
 通过将环境变量`TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
 
+通过别名解决多个空间（bucket）中数据库命名冲突问题。
+
+系统级 schema 问题。
+
+空间授权问题。
+
 # 管理端
 
 创建并管理`bucket`。
