数据库添加系统名，解决多租户模式下命名冲突问题

--- a/doc/多租户.md
+++ b/doc/多租户.md
@@ -2,15 +2,15 @@
 
 通过将环境变量`TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
 
-通过别名解决多个空间（bucket）中数据库命名冲突问题。
-
-系统级 schema 问题。
+通过给数据库设置系统名（sysname）解决多个空间（bucket）中数据库命名冲突问题。
 
 空间授权问题。
 
 分配默认 bucket
 
 # 系统端
+
+系统级 schema 问题。
 
 # 管理端
 
@@ -29,11 +29,3 @@
 # 关闭多租户模式
 
 通过环境变量，关闭多租户模式。
-
-# 单用户模式和多用户模式
-
-单用户模式：存储空间独享。
-
-多用户模式：存储空间共享。
-
-# 数据库命名
