支持邀请访问bucket

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -1,6 +1,8 @@
 元数据存放在`tms_admin`库`mongodb_object`集合中。
 
-# 数据库
+# 空间（bucket）
+
+# 数据库（database）
 
 | 字段          | 说明                                                                       |
 | ------------- | -------------------------------------------------------------------------- |
@@ -13,7 +15,7 @@
 | type          | 等于`database`                                                             |
 | entensionInfo | 存放用户自定义的数据库描述信息                                             |
 
-# 集合
+# 集合（collection）
 
 | 字段        | 说明                                |
 | ----------- | ----------------------------------- |
@@ -25,4 +27,4 @@
 | schema_id   | 集合中文档对应的`json-schema`定义。 |
 | type        | 等于`collection`                    |
 
-# 文档
+# 文档（document）
