--- a/doc/多租户.md
+++ b/doc/多租户.md
@@ -1,22 +1,24 @@
-通过设置`bucket`实现多租户。
+通过空间（`bucket`）实现多租户模式。
 
 通过将环境变量`TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
 
 通过给数据库设置系统名（sysname）解决多个空间（bucket）中数据库命名冲突问题。
 
-空间授权问题。
-
-分配默认 bucket
+通过邀请机制解决空间授权问题。
 
 # 系统端
 
 系统级 schema 问题。
 
+设置账号首次登录进行的初始操作，例如：创建 bucket。
+
 # 管理端
 
 创建并管理`bucket`。
 
-通过邀请方式允许其他用户访问`bucket`。
+通过邀请方式允许其他用户访问`bucket`，解决授权问题。
+
+使用`bucket_invite_log`记录邀请信息。`bucket`的创建者可以创建邀请，邀请包含邀请码和有效期。有账号的用户通过登录后，接受邀请，加入`bucket`的授权用户列表中。
 
 # 用户端
 
