支持对bucket进行访问授权

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -2,6 +2,16 @@
 
 # 空间（bucket）
 
+| 字段               | 说明              |
+| ------------------ | ----------------- |
+| \_id               | `mongodb`内部`id` |
+| name               | 英文名。          |
+| title              | 中文名            |
+| description        |                   |
+| coworkers          | 授权访问用户      |
+| coworkers.id       | 授权访问用户的 id |
+| coworkers.nickname | 授权访问用的昵称  |
+
 # 数据库（database）
 
 | 字段          | 说明                                                                       |
@@ -28,3 +38,21 @@
 | type        | 等于`collection`                    |
 
 # 文档（document）
+
+| 字段 | 说明              |
+| ---- | ----------------- |
+| \_id | `mongodb`内部`id` |
+
+# 空间邀请日志（bucket_invite_log）
+
+| 字段     | 说明              |
+| -------- | ----------------- |
+| \_id     | `mongodb`内部`id` |
+| inviter  | 邀请人 id         |
+| bucket   | 空间名            |
+| code     | 邀请码            |
+| createAt | 创建时间          |
+| expairAt | 过期时间          |
+| invitee  | 被邀请人 id       |
+| nickname | 被邀请人昵称      |
+| acceptAt | 接受邀请时间      |
