--- a/doc/多租户.md
+++ b/doc/多租户.md
@@ -18,7 +18,7 @@
 
 通过邀请方式允许其他用户访问`bucket`，解决授权问题。
 
-使用`bucket_invite_log`记录邀请信息。`bucket`的创建者可以创建邀请，邀请包含邀请码和有效期。有账号的用户通过登录后，接受邀请，加入`bucket`的授权用户列表中。
+使用`bucket_invite_log`记录邀请信息。`bucket`的创建者可以创建邀请，邀请包含邀请码、昵称和有效期。有账号的用户通过登录后，接受邀请，加入`bucket`的授权用户列表中。
 
 # 用户端
 
