--- a/doc/用户端接口.md
+++ b/doc/用户端接口.md
@@ -1,3 +1,26 @@
 # 空间
 
 ## 接收访问空间邀请
+
+用户接收访问`bucket`邀请时，需要提供昵称（nickname）和邀请码（code）。
+
+> POST /mongo/bucket/invite/accept?bucket=BUCKET_NAME
+
+查询参数
+
+| 参数   | 说明             |
+| ------ | ---------------- |
+| bucket | 空间名称（name） |
+
+POST 参数
+
+| 参数     | 说明                 |
+| -------- | -------------------- |
+| nickname | 邀请时指定的用户昵称 |
+| code     | 邀请时生成的邀请码   |
+
+返回结果
+
+```
+{"msg":"正常","code":0,"result":"xxxx"}
+```
