--- a/doc/管理端接口.md
+++ b/doc/管理端接口.md
@@ -2,7 +2,9 @@
 
 ## 邀请用户访问空间
 
-POST /bucket/coworker/invite
+通过邀请机制授权用户访问`bucket`。创建邀请时需要指定被邀请用户的昵称（nickname），成功创建后返回邀请码。
+
+> POST /admin/bucket/coworker/invite?bucket=BUCKET_NAME
 
 查询参数
 
@@ -19,12 +21,12 @@ POST 参数
 返回结果
 
 ```
-{"msg":"正常","code":0,"result":"ok"}%
+{"msg":"正常","code":0,"result":"xxxx"}
 ```
 
 ## 删除授权访问用户
 
-GET /bucket/coworker/remove
+> GET /admin/bucket/coworker/remove?bucket=BUCKET_NAME&coworker=CLIENT_ID
 
 查询参数
 
@@ -32,3 +34,7 @@ GET /bucket/coworker/remove
 | -------- | ---------------- |
 | bucket   | 空间名称（name） |
 | coworker | 授权用户的 id    |
+
+```
+{"msg":"正常","code":0,"result":"ok"}%
+```
