优化管理对象属性定义代码

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -43,6 +43,16 @@
 | ---- | ----------------- |
 | \_id | `mongodb`内部`id` |
 
+# 文档列定义（schema）
+
+| 字段   | 说明                                                     |
+| ------ | -------------------------------------------------------- |
+| \_id   | `mongodb`内部`id`                                        |
+| bucket | 文档列定义所属存储空间                                   |
+| scope  | 文档（document），数据库（db）或集合（collection）的定义 |
+| body   | `json-schema`数据                                        |
+| type   | 等于`schema`                                             |
+
 # 空间邀请日志（bucket_invite_log）
 
 | 字段     | 说明              |
