支持设置bucket预制内容

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -1,6 +1,6 @@
-元数据存放在`tms_admin`库`mongodb_object`集合中。
+数据库，集合和文档的元数据存放在`tms_admin`库`mongodb_object`集合中。
 
-# 空间（bucket）
+# 空间（tms_admin/bucket）
 
 | 字段               | 说明              |
 | ------------------ | ----------------- |
@@ -12,48 +12,7 @@
 | coworkers.id       | 授权访问用户的 id |
 | coworkers.nickname | 授权访问用的昵称  |
 
-# 数据库（database）
-
-| 字段          | 说明                                                                       |
-| ------------- | -------------------------------------------------------------------------- |
-| \_id          | `mongodb`内部`id`                                                          |
-| bucket        | 数据库所属存储空间                                                         |
-| name          | 英文名。在每个`bucket`内唯一。                                             |
-| sysname       | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 |
-| title         | 中文名                                                                     |
-| description   |                                                                            |
-| type          | 等于`database`                                                             |
-| entensionInfo | 存放用户自定义的数据库描述信息                                             |
-
-# 集合（collection）
-
-| 字段        | 说明                                |
-| ----------- | ----------------------------------- |
-| \_id        | `mongodb`内部`id`                   |
-| bucket      | 数据库所属存储空间                  |
-| database    | 引用数据库对象的`name`字段。        |
-| name        | 英文名。在每个`bucket`内唯一。      |
-| description |                                     |
-| schema_id   | 集合中文档对应的`json-schema`定义。 |
-| type        | 等于`collection`                    |
-
-# 文档（document）
-
-| 字段 | 说明              |
-| ---- | ----------------- |
-| \_id | `mongodb`内部`id` |
-
-# 文档列定义（schema）
-
-| 字段   | 说明                                                     |
-| ------ | -------------------------------------------------------- |
-| \_id   | `mongodb`内部`id`                                        |
-| bucket | 文档列定义所属存储空间                                   |
-| scope  | 文档（document），数据库（db）或集合（collection）的定义 |
-| body   | `json-schema`数据                                        |
-| type   | 等于`schema`                                             |
-
-# 空间邀请日志（bucket_invite_log）
+# 空间邀请日志（tms_admin/bucket_invite_log）
 
 | 字段     | 说明              |
 | -------- | ----------------- |
@@ -66,3 +25,76 @@
 | invitee  | 被邀请人 id       |
 | nickname | 被邀请人昵称      |
 | acceptAt | 接受邀请时间      |
+
+# 数据库（tms_admin/mongodb_object）
+
+| 字段          | 说明                                                                       |
+| ------------- | -------------------------------------------------------------------------- |
+| \_id          | `mongodb`内部`id`                                                          |
+| bucket        | 数据库所属存储空间                                                         |
+| name          | 英文名。在每个`bucket`内唯一。                                             |
+| sysname       | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 |
+| title         | 中文名                                                                     |
+| description   |                                                                            |
+| type          | 等于`database`                                                             |
+| entensionInfo | 存放用户自定义的数据库描述信息                                             |
+
+# 集合（tms_admin/mongodb_object）
+
+| 字段        | 说明                              |
+| ----------- | --------------------------------- |
+| \_id        | `mongodb`内部`id`                 |
+| bucket      | 集合所属存储空间                  |
+| database    | 引用数据库对象的`name`字段。      |
+| name        | 英文名。在每个`bucket`内唯一。    |
+| title       | 中文名                            |
+| description |                                   |
+| schema_id   | 集合中文档对应的扩展字段定义 id。 |
+| type        | 等于`collection`                  |
+
+# 扩展字段定义（tms_admin/mongodb_object）
+
+| 字段   | 说明                                                             |
+| ------ | ---------------------------------------------------------------- |
+| \_id   | `mongodb`内部`id`                                                |
+| bucket | 扩展字段定义所属存储空间                                         |
+| title  | 中文名                                                           |
+| scope  | 适用对象类型：文档（document），数据库（db）或集合（collection） |
+| body   | `json-schema`数据                                                |
+| type   | 等于`schema`                                                     |
+
+`bucket`默认`database`，`collection`，`schema`放在`tms_admin`库`bucket_preset_object`集合中。
+
+# 数据库（tms_admin/bucket_preset_object）
+
+| 字段          | 说明                                     |
+| ------------- | ---------------------------------------- |
+| \_id          | `mongodb`内部`id`                        |
+| name          | 引用名称（英文）。在每个`bucket`内唯一。 |
+| title         | 中文名                                   |
+| description   |                                          |
+| type          | 等于`database`                           |
+| entensionInfo | 存放用户自定义的数据库描述信息           |
+
+# 集合（tms_admin/bucket_preset_object）
+
+| 字段        | 说明                                     |
+| ----------- | ---------------------------------------- |
+| \_id        | `mongodb`内部`id`                        |
+| database    | 引用数据库对象的`name`字段。             |
+| name        | 引用名称（英文）。在每个`bucket`内唯一。 |
+| title       | 中文名                                   |
+| description |                                          |
+| schema_id   | 集合中文档对应的`json-schema`定义。      |
+| type        | 等于`collection`                         |
+
+# 扩展字段定义（tms_admin/bucket_preset_object）
+
+| 字段        | 说明                                                             |
+| ----------- | ---------------------------------------------------------------- |
+| \_id        | `mongodb`内部`id`                                                |
+| title       | 中文名                                                           |
+| scope       | 适用对象类型：文档（document），数据库（db）或集合（collection） |
+| description |                                                                  |
+| body        | `json-schema`数据                                                |
+| type        | 等于`schema`                                                     |
