--- a/doc/多租户.md
+++ b/doc/多租户.md
@@ -8,11 +8,7 @@
 
 # 系统端
 
-进行系统级设置，例如所有租户都可见的文档`schema`，给`bucket`创建默认数据库及数据库扩展属性等。
-
-系统级 schema 问题。
-
-设置账号首次登录进行的初始操作，例如：创建 bucket。
+进行系统级设置，例如：创建`bucket`时自动创建`database`，`collection`和`schema`。
 
 # 管理端
 
