--- a/doc/管理端接口.md
+++ b/doc/管理端接口.md
@@ -24,6 +24,31 @@ POST 参数
 {"msg":"正常","code":0,"result":"xxxx"}
 ```
 
+## 接收访问空间邀请
+
+用户接收访问`bucket`邀请时，需要提供昵称（nickname）和邀请码（code）。
+
+> POST /admin/bucket/coworker/accept?bucket=BUCKET_NAME
+
+查询参数
+
+| 参数   | 说明             |
+| ------ | ---------------- |
+| bucket | 空间名称（name） |
+
+POST 参数
+
+| 参数     | 说明                 |
+| -------- | -------------------- |
+| nickname | 邀请时指定的用户昵称 |
+| code     | 邀请时生成的邀请码   |
+
+返回结果
+
+```
+{"msg":"正常","code":0,"result":"xxxx"}
+```
+
 ## 删除授权访问用户
 
 > GET /admin/bucket/coworker/remove?bucket=BUCKET_NAME&coworker=CLIENT_ID
