插件机制优化

--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -17,7 +17,7 @@ let pluginConfig = {
   collection: [],
   document:  [
     [
-      'plugins/examples', { batch: ["all", "filter", "ids"] }, { name: '插件示例一', description: '插件示例一' }
+      url, { batch: ["all", "filter", "ids"], method: 'get' }, { name: '插件示例一', description: '插件示例一' }
     ]
   ]
 }
