--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -17,7 +17,7 @@ let pluginConfig = {
   collection: [],
   document:  [
     [
-      url, { batch: ["all", "filter", "ids"], method: 'get' }, { name: '插件示例一', description: '插件示例一' }
+      {url: 'http://localhost:3000/api/mongo/document/updateMany', method: 'post'}, {  }, { name: '插件示例一', description: '插件示例一', batch: ["all", "filter", "ids"] }
     ]
   ]
 }
