插件机制优化

--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -25,16 +25,21 @@ let pluginConfig = {
 module.exports = pluginConfig
 
 
-## 对应插件文件
+## 外部插件
 
-根据plugin配置文件给出的path，创建对应的plugins/examples文件
-
+外部插件需根据以下规定返回参数
 接收参数
+| 参数      | 说明              |
+| ------    | ----------------  |
+| data      | 可操作的数据源   |
 
-| 参数      | 说明             |
-| ------    | ----------------|
-| data      | 可操作数据       |
-| columns   | 集合列定义       |
+返回参数
+
+| 参数      | 说明              |
+| ------    | ----------------  |
+| code      | 为0代表成功        |
+| data      | 操作成功返回数据   |
+| msg       | 成功或失败信息提示 |
 
 返回参数需与columns定义的字段相匹配，才可成功操作mongodb
 
