插件机制优化-支持回调及接收

--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -4,7 +4,7 @@
 
 需要在back/config下创建plugin.js配置文件，由机制去完成mongdb数据操作
 
-参数说明
+## sendConfig参数说明
 
 | 参数          | 说明             |
 | ------------ | ---------------- |
@@ -12,17 +12,69 @@
 | collection   | 集合层            |
 | document     | 文档层            |
 
-let pluginConfig = {
+
+## 每条接口参数说明
+| 参数          | 说明             |
+| ------------ | ---------------- |
+| ---------数组中第一项  -------   |
+| url          | 接口地址          |
+| method       | 接口方法           |
+| ---------数组中第二项(机制内配置信息)  -------   |
+| docSchemas        | 是否需要传递docSchemas信息          |
+| isNeedGetParams   | 是否需要将get方式接收到的参数传递给外部接口            |
+| callback          | 是否需要回调函数，如果是则需指定path及callbackName            |
+| ---------数组中第三项(前端用户展示配置信息)  -------   |
+| name              | 按钮名称                            |
+| description       | 描述信息         |
+| batch             | 按钮所拥有的过滤项条件          |
+| isConfirm         | 是否需要二次确认          |
+| confirmMsg        | 二次确认提示信息          |
+| confirmText       | 自定义确认按钮信息          |
+| cancelText        | 自定义取消按钮信息          |
+| successParams     | 确认之后需要额外传递给后端的信息(字段由配置文件决定)   |
+| failParams        | 取消之后需要额外传递给后端的信息(字段由配置文件决定)   |
+
+## sendConfig格式
+sendConfig = {
   db: [],
   collection: [],
   document:  [
     [
-      {url: 'http://localhost:3000/api/mongo/document/updateMany', method: 'post'}, {  }, { name: '插件示例一', description: '插件示例一', batch: ["all", "filter", "ids"] }
-    ]
+        {url: '/it/api/checkApi/tDMobile', method: 'post'}, { docSchemas: true, isNeedGetParams: true, callback: { path: `${sendCBPath}/document`, callbackName: 'unSubScribeCB' } }, { name: '号码退订', description: '号码退订', batch: ["all", "filter", "ids"], isConfirm: true, confirmMsg: '提示信息',  confirmText: '自定义确认按钮信息', cancelText: '自定义取消按钮信息', successParams: { bucket: 'pool', isZero: 'Y' }, failParams: { bucket: 'pool', isZero: 'N' }}
+      ],
   ]
 }
 
-module.exports = pluginConfig
+## receiveConfig参数说明
+| 参数          | 说明               |
+| ------------ | ----------------   |
+| it           | 模块名称，以模块划分 |
+
+
+## 每层模块内的参数说明
+| 参数          | 说明               |
+| ------------  | ----------------   |
+| name          | 接口名称           |
+| event          | 模块特有属性(需与外部接口传递值保存一致)           |
+| eventType      | 模块特有属性(需与外部接口传递值保存一致)           |
+| quota           | 更新数据指标，默认不设置，则以_id为准           |
+| callback        | 是否需要回调函数，如果是则需指定path及callbackName            |
+
+
+## receiveConfig格式
+
+// 接收配置-以模块划分
+receiveConfig = {
+  it: [
+    { name: '**', event: '**', eventType: '**', quota: '**' },
+  ]
+}
+
+## 最终导出数据格式，必须包含sendConfig
+module.exports = {
+  sendConfig,
+  receiveConfig
+}
 
 
 ## 外部插件
