--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -3,6 +3,7 @@
 ## plugin配置文件
 
 需要在back/config下创建plugin.js配置文件，由机制去完成mongdb数据操作
+注：目前机制仅支持外部接口方式，故需要在config目录下建立trusted-hosts.js文件，配置登录权限白名单
 
 ## sendConfig参数说明
 
@@ -27,6 +28,7 @@
 | name              | 按钮名称                            |
 | description       | 描述信息         |
 | batch             | 按钮所拥有的过滤项条件          |
+| auth              | <Array> 权限控制         |
 | isConfirm         | 是否需要二次确认          |
 | confirmMsg        | 二次确认提示信息          |
 | confirmText       | 自定义确认按钮信息          |
@@ -57,8 +59,10 @@ sendConfig = {
 | name          | 接口名称           |
 | event          | 模块特有属性(需与外部接口传递值保存一致)           |
 | eventType      | 模块特有属性(需与外部接口传递值保存一致)           |
+| docSchemas      | 是否需要传递docSchemas信息           |
 | quota           | 更新数据指标，默认不设置，则以_id为准           |
 | callback        | 是否需要回调函数，如果是则需指定path及callbackName            |
+| noActionLog     | 设置为true代表，不进行日志记录;默认为false    |
 
 
 ## receiveConfig格式
