--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -64,6 +64,8 @@ sendConfig = {
 | quota           | 更新数据指标，默认不设置，则以_id为准           |
 | callback        | 是否需要回调函数，如果是则需指定path及callbackName            |
 | noActionLog     | 设置为true代表，不进行日志记录;默认为false    |
+| before        | 是否需要入库前置操作，如果是则需指定path及beforeName            |
+
 
 
 ## callback提供的参数说明
