整理后端服务代码和文档

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -1,4 +1,17 @@
-数据库，集合和文档的元数据存放在`tms_admin`库`mongodb_object`集合中。
+`mongodb`数据库中存放的内容。
+
+| 名称      | 用途             |
+| --------- | ---------------- |
+| tms_admin | 管理数据数据库。 |
+
+| 名称                    | 用途                             |
+| ----------------------- | -------------------------------- |
+| **tms_admin**           |                                  |
+| mongodb_object          | 记录数据库，集合和文档的元数据。 |
+| bucket                  | `bucket`对象。                   |
+| bucket_invite_log       | `bucket`邀请日志。               |
+| bucket_preset_object    | `bucket`预制数据。               |
+| tms_app_data_action_log | 记录操作日志。                   |
 
 # 空间（tms_admin/bucket）
 
