--- a/doc/管理端接口.md
+++ b/doc/管理端接口.md
@@ -1,4 +1,19 @@
-# 空间
+# 空间（bucket）
+
+| API                  |      | 说明     |
+| -------------------- | ---- | -------- |
+| /admin/bucket/create | POST | 创建空间 |
+| /admin/bucket/update | POST | 更新空间 |
+| /admin/bucket/remove | GET  | 删除空间 |
+| /admin/bucket/list   | GET  | 列出空间 |
+
+# 邀请（cowork）
+
+| API                           |      | 说明                         |
+| ----------------------------- | ---- | ---------------------------- |
+| /admin/bucket/coworker/invite | POST | 邀请用户加入空间（授权）     |
+| /admin/bucket/coworker/accept | POST | 接受加入空间邀请（接受授权） |
+| /admin/bucket/coworker/remove | GET  | 取消邀请（取消授权）         |
 
 ## 邀请用户访问空间
 
@@ -63,3 +78,59 @@ POST 参数
 ```
 {"msg":"正常","code":0,"result":"ok"}%
 ```
+
+# 接口清单
+
+| 接口                                     | 方法 | 说明                                       |
+| ---------------------------------------- | ---- | ------------------------------------------ |
+| **数据库（db）**                         |      |                                            |
+| /admin/db/list                           | GET  | 所有的数据库                               |
+| /admin/db/create                         | POST | 新建数据库                                 |
+| /admin/db/remove                         | GET  | 删除数据库                                 |
+| /admin/db/top                            | GET  | 数据库置顶                                 |
+| **集合（collection）**                   |      |                                            |
+| /admin/collection/create                 | POST | 指定库库下新建集合                         |
+| /admin/collection/remove                 | GET  | 指定库下删除指定的集合                     |
+| /admin/collection/rename                 | GET  | 修改指定库下指定集合的名称                 |
+| /admin/collection/list                   | GET  | 指定库下所有的集合                         |
+| /admin/collection/byName                 | GET  | 根据数据库名称和集合名称，返回指定集合信息 |
+| **文档（document）**                     |      |                                            |
+| /admin/document/list                     | GET  | 指定库中的指定集合下所有的文档             |
+| /admin/document/create                   | POST | 指定库中的指定集合下新建文档               |
+| /admin/document/getGroupByColumnVal      | POST | 根据某一列的值分组                         |
+| /admin/document/removeMany               | POST | 批量删除。                                 |
+| /admin/document/cutDocs                  |      | 剪切数据到指定集合中                       |
+| /admin/document/transformsCol            |      |                                            |
+| /admin/document/getDocsByRule2           |      |                                            |
+| /admin/document/updateMany               |      | 批量修改数据。                             |
+| /admin/document/getDocCompleteStatusById |      |                                            |
+
+## 新建数据库
+
+**url**
+
+> /admin/db/create
+
+**参数**
+
+| 名称 | 类型   | 说明                                                                         |
+| ---- | ------ | ---------------------------------------------------------------------------- |
+| db   | string | 数据库名称。库名必须以英文字母开头，可用英文字母或\_或数字组合，最长 64 位。 |
+
+## 获得集合清单
+
+**url**
+
+> /admin/collection/list
+
+| 名称 | 类型   | 说明               |
+| ---- | ------ | ------------------ |
+| db   | string | 集合所属数据库名称 |
+
+**返回**
+
+| 返回参数 | 参数类型 | 参数说明      |
+| -------- | -------- | ------------- |
+| code     | Integer  | 执行结果 code |
+| msg      | String   | 执行结果说明  |
+| result   | Array    | 集合列表      |
