--- a/doc/系统端接口.md
+++ b/doc/系统端接口.md
@@ -1,5 +1,12 @@
 # 预制数据库
 
+| API               |      | 说明           |
+| ----------------- | ---- | -------------- |
+| /system/db/create | POST | 创建预制数据库 |
+| /system/db/update | POST | 更新预制数据库 |
+| /system/db/remove | GET  | 删除预制数据库 |
+| /sytem/db/list    | GET  | 列出预制数据库 |
+
 ## 新建预制数据库
 
 > POST /system/db/create
@@ -73,6 +80,13 @@ POST 参数
 ```
 
 # 预制集合
+
+| API                       |      | 说明         |
+| ------------------------- | ---- | ------------ |
+| /system/collection/create | POST | 创建预制集合 |
+| /system/collection/update | POST | 更新预制集合 |
+| /system/collection/remove | GET  | 删除预制集合 |
+| /sytem/collection/list    | GET  | 列出预制集合 |
 
 ## 新建预制集合
 
