完成管理端和系统端API在线说明文档

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -15,15 +15,15 @@
 
 # 空间（tms_admin/bucket）
 
-| 字段               | 说明              |
-| ------------------ | ----------------- |
-| \_id               | `mongodb`内部`id` |
-| name               | 英文名。          |
-| title              | 中文名            |
-| description        |                   |
-| coworkers          | 授权访问用户      |
-| coworkers.id       | 授权访问用户的 id |
-| coworkers.nickname | 授权访问用的昵称  |
+| 字段               | 说明              | 必填 |
+| ------------------ | ----------------- | ---- |
+| \_id               | `mongodb`内部`id` | 是   |
+| name               | 英文名。          | 是   |
+| title              | 中文名            | 否   |
+| description        | 说明              | 否   |
+| coworkers          | 授权访问用户      | 否   |
+| coworkers.id       | 授权访问用户的 id | 否   |
+| coworkers.nickname | 授权访问用的昵称  | 否   |
 
 # 空间邀请日志（tms_admin/bucket_invite_log）
 
@@ -41,31 +41,32 @@
 
 # 数据库（tms_admin/mongodb_object）
 
-| 字段          | 说明                                                                       |
-| ------------- | -------------------------------------------------------------------------- |
-| \_id          | `mongodb`内部`id`                                                          |
-| bucket        | 数据库所属存储空间                                                         |
-| name          | 英文名。在每个`bucket`内唯一。                                             |
-| sysname       | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 |
-| title         | 中文名                                                                     |
-| description   |                                                                            |
-| type          | 等于`database`                                                             |
-| entensionInfo | 存放用户自定义的数据库描述信息                                             |
+| 字段          | 说明                                                                       | 必填 |
+| ------------- | -------------------------------------------------------------------------- | ---- |
+| \_id          | `mongodb`内部`id`                                                          | 是   |
+| bucket        | 数据库所属存储空间                                                         | 否   |
+| name          | 英文名。在每个`bucket`内唯一。                                             | 是   |
+| sysname       | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 | 是   |
+| title         | 中文名                                                                     | 是   |
+| description   | 说明                                                                       | 否   |
+| type          | 等于`database`，不可修改。                                                 | 是   |
+| top           | 是否置顶。值为`top`时置顶。                                                | 否   |
+| entensionInfo | 存放用户自定义的数据库描述信息                                             | 否   |
 
 # 集合（tms_admin/mongodb_object）
 
-| 字段        | 说明                              |
-| ----------- | --------------------------------- |
-| \_id        | `mongodb`内部`id`                 |
-| bucket      | 集合所属存储空间                  |
-| database    | 引用数据库对象的`name`字段。      |
-| name        | 英文名。在每个`bucket`内唯一。    |
-| title       | 中文名                            |
-| description |                                   |
-| schema_id   | 集合中文档对应的扩展字段定义 id。 |
-| type        | 等于`collection`                  |
+| 字段        | 说明                              | 必填 |
+| ----------- | --------------------------------- | ---- |
+| \_id        | `mongodb`内部`id`                 | 是   |
+| bucket      | 集合所属存储空间                  | 否   |
+| database    | 引用数据库对象的`name`字段。      | 是   |
+| name        | 英文名。在每个`database`内唯一。  | 是   |
+| title       | 中文名                            | 否   |
+| description | 说明                              | 否   |
+| schema_id   | 集合中文档对应的扩展字段定义 id。 | 否   |
+| type        | 等于`collection`，不可修改。      | 是   |
 
-# 扩展字段定义（tms_admin/mongodb_object）
+# 文档列定义（tms_admin/mongodb_object）
 
 | 字段   | 说明                                                             |
 | ------ | ---------------------------------------------------------------- |
