--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -1,17 +1,20 @@
 # 支持插件机制
 
+插件是通过配置的方式，提供给用户对 mongodb 管理对象（db，collection，document）进行操作的组件。
+
 ## plugin 配置文件
 
-需要在 back/config 下创建 plugin.js 配置文件，由机制去完成 mongdb 数据操作
-注：目前机制仅支持外部接口方式，故需要在 config 目录下建立 trusted-hosts.js 文件，配置登录权限白名单
+在 back/config 下创建 plugin.js 配置。
+
+注：目前仅支持外部接口方式，故需要在 config 目录下建立 trusted-hosts.js 文件，配置登录权限白名单。
 
 ## sendConfig 参数说明
 
-| 参数       | 说明     |
-| ---------- | -------- |
-| db         | 数据库层 |
-| collection | 集合层   |
-| document   | 文档层   |
+| 参数       | 说明   |
+| ---------- | ------ |
+| db         | 数据库 |
+| collection | 集合   |
+| document   | 文档   |
 
 ## 每条接口参数说明
 
