修改插件设置以及删除dockerfile

--- a/doc/插件机制.md
+++ b/doc/插件机制.md
@@ -4,11 +4,9 @@
 
 ## plugin 配置文件
 
-在 back/config 下创建 plugin.js 配置。
+在 back/config 下创建 plugin.js 配置，支持加载应用自身插件和调用外部接口两种方式，
 
-注：目前仅支持外部接口方式，故需要在 config 目录下建立 trusted-hosts.js 文件，配置登录权限白名单。
-
-## sendConfig 参数说明
+## commonConfig 参数说明
 
 | 参数       | 说明   |
 | ---------- | ------ |
@@ -16,29 +14,34 @@
 | collection | 集合   |
 | document   | 文档   |
 
+| 参数        | 说明                                      |
+| ----------- | ----------------------------------------- |
+| name        | 方法名                                    |
+| title       | 按钮名称                                  |
+| description | 描述信息                                  |
+| type        | 方法类型【http:外部接口;native:内部方法】 |
+| batch       | 按钮所拥有的过滤项条件                    |
+| auth        | <Array> 权限控制                          |
+
+## 调用自身插件
+
+在 back/plugins 下创建以 name 为文件名的文件，写入具体的实现逻辑。
+
+## 调用外部接口
+
+需要在 config 目录下建立 trusted-hosts.js 文件，配置登录权限白名单。
+
 ## 每条接口参数说明
 
-| 参数                                   | 说明                                                  |
-| -------------------------------------- | ----------------------------------------------------- |
-| **数组中第一项**                       |                                                       |
-| url                                    | 接口地址                                              |
-| method                                 | 接口方法                                              |
-| **数组中第二项(机制内配置信息)**       |                                                       |
-| docSchemas                             | 是否需要传递 docSchemas 信息                          |
-| isNeedGetParams                        | 是否需要将 get 方式接收到的参数传递给外部接口         |
-| callback                               | 是否需要回调函数，如果是则需指定 path 及 callbackName |
-| **数组中第三项(前端用户展示配置信息)** |                                                       |
-| name                                   | 按钮名称                                              |
-| description                            | 描述信息                                              |
-| batch                                  | 按钮所拥有的过滤项条件                                |
-| auth                                   | <Array> 权限控制                                      |
-| isConfirm                              | 是否需要二次确认                                      |
-| confirmMsg                             | 二次确认提示信息                                      |
-| confirmText                            | 自定义确认按钮信息                                    |
-| cancelText                             | 自定义取消按钮信息                                    |
-| successParams                          | 确认之后需要额外传递给后端的信息(字段由配置文件决定)  |
-| failParams                             | 取消之后需要额外传递给后端的信息(字段由配置文件决定)  |
-| defaultParams                          | 默认参数项,前端会将该参数合并至 get 参数中            |
+| 参数                             | 说明                                                  |
+| -------------------------------- | ----------------------------------------------------- |
+| **数组中第一项**                 |                                                       |
+| url                              | 接口地址                                              |
+| method                           | 接口方法                                              |
+| **数组中第二项(机制内配置信息)** |                                                       |
+| docSchemas                       | 是否需要传递 docSchemas 信息                          |
+| isNeedGetParams                  | 是否需要将 get 方式接收到的参数传递给外部接口         |
+| callback                         | 是否需要回调函数，如果是则需指定 path 及 callbackName |
 
 ## sendConfig 格式
 
@@ -48,49 +51,8 @@ sendConfig = {
   collection: [],
   document: [
     [
-      {url: '/it/api/checkApi/tDMobile', method: 'post'}, { docSchemas: true, isNeedGetParams: true, callback: { path: `${sendCBPath}/document`, callbackName: 'unSubScribeCB' } }, { name: '号码退订', description: '号码退订', batch: ["all", "filter", "ids"], isConfirm: true, confirmMsg: '提示信息', confirmText: '自定义确认按钮信息', cancelText: '自定义取消按钮信息', successParams: { bucket: 'pool', isZero: 'Y' }, failParams: { bucket: 'pool', isZero: 'N' }}
+      {url: '/it/api/checkApi/tDMobile', method: 'post'}, { docSchemas: true, isNeedGetParams: true, callback: { path: `${sendCBPath}/document`, callbackName: 'unSubScribeCB' } },}
     ],
-  ]
-}
-```
-
-## receiveConfig 参数说明
-
-| 参数 | 说明                 |
-| ---- | -------------------- |
-| it   | 模块名称，以模块划分 |
-
-## 每层模块内的参数说明
-
-| 参数        | 说明                                                    |
-| ----------- | ------------------------------------------------------- |
-| name        | 接口名称                                                |
-| event       | 模块特有属性(需与外部接口传递值保存一致)                |
-| eventType   | 模块特有属性(需与外部接口传递值保存一致)                |
-| docSchemas  | 是否需要传递 docSchemas 信息                            |
-| quota       | 更新数据指标，默认不设置，则以\_id 为准                 |
-| callback    | 是否需要回调函数，如果是则需指定 path 及 callbackName   |
-| noActionLog | 设置为 true 代表，不进行日志记录;默认为 false           |
-| before      | 是否需要入库前置操作，如果是则需指定 path 及 beforeName |
-
-## callback 提供的参数说明
-
-| 参数    | 说明               |
-| ------- | ------------------ |
-| data    | 数据项，不包含\_id |
-| docIds  | ids 集合           |
-| cl      |                    |
-| existDb |                    |
-| clName  | 表名               |
-| query   | query 参数         |
-
-## receiveConfig 格式
-
-```
-// 接收配置-以模块划分
-receiveConfig = {
-  it: [
-    { name: '**', event: '**', eventType: '**', quota: '**' },
   ]
 }
 ```
@@ -99,8 +61,8 @@ receiveConfig = {
 
 ```
 module.exports = {
-  sendConfig,
-  receiveConfig
+  commonConfig,
+  sendConfig
 }
 ```
 
