--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -1,12 +1,8 @@
 `mongodb`数据库中存放的内容。
 
-| 名称      | 用途             |
-| --------- | ---------------- |
-| tms_admin | 管理数据数据库。 |
-
 | 名称                    | 用途                             |
 | ----------------------- | -------------------------------- |
-| **tms_admin**           |                                  |
+| **tms_admin**           | 管理数据数据库。                 |
 | mongodb_object          | 记录数据库，集合和文档的元数据。 |
 | bucket                  | `bucket`对象。                   |
 | bucket_invite_log       | `bucket`邀请日志。               |
@@ -44,27 +40,30 @@
 | 字段          | 说明                                                                       | 必填 |
 | ------------- | -------------------------------------------------------------------------- | ---- |
 | \_id          | `mongodb`内部`id`                                                          | 是   |
+| type          | 等于`database`，不可修改。                                                 | 是   |
 | bucket        | 数据库所属存储空间                                                         | 否   |
 | name          | 英文名。在每个`bucket`内唯一。                                             | 是   |
 | sysname       | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 | 是   |
 | title         | 中文名                                                                     | 是   |
 | description   | 说明                                                                       | 否   |
-| type          | 等于`database`，不可修改。                                                 | 是   |
 | top           | 是否置顶。值为`top`时置顶。                                                | 否   |
 | entensionInfo | 存放用户自定义的数据库描述信息                                             | 否   |
 
 # 集合（tms_admin/mongodb_object）
 
-| 字段        | 说明                              | 必填 |
-| ----------- | --------------------------------- | ---- |
-| \_id        | `mongodb`内部`id`                 | 是   |
-| bucket      | 集合所属存储空间                  | 否   |
-| database    | 引用数据库对象的`name`字段。      | 是   |
-| name        | 英文名。在每个`database`内唯一。  | 是   |
-| title       | 中文名                            | 否   |
-| description | 说明                              | 否   |
-| schema_id   | 集合中文档对应的扩展字段定义 id。 | 否   |
-| type        | 等于`collection`，不可修改。      | 是   |
+| 字段        | 说明                                             | 必填 |
+| ----------- | ------------------------------------------------ | ---- |
+| \_id        | `mongodb`内部`id`                                | 是   |
+| type        | 等于`collection`，不可修改。                     | 是   |
+| bucket      | 集合所属存储空间                                 | 否   |
+| database    | 引用数据库对象的`name`字段。                     | 是   |
+| name        | 英文名。在每个`database`内唯一。                 | 是   |
+| title       | 中文名                                           | 否   |
+| description | 说明                                             | 否   |
+| schema_id   | 集合中文档对应的扩展字段定义 id。                | 否   |
+| tags        |                                                  | 否   |
+| default_tag |                                                  | 否   |
+| usage       | 集合用途，`0`或不指定为普通集合，`1`为聚合集合。 | 否   |
 
 # 文档列定义（tms_admin/mongodb_object）
 
